--- a/storefront/.vscode/settings.json
+++ b/storefront/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "python.pythonPath": "C:\\Users\\ttt\\.virtualenvs\\storefront-Bap42eK_\\Scripts\\python.exe",
-  "[python]": {
-    "editor.defaultFormatter": "ms-python.autopep8"
-  },
-  "python.formatting.provider": "none"
+  "python.pythonPath": "/Users/moshfeghhamedani/.local/share/virtualenvs/storefront-Xk9k71tz/bin/python"
 }
